add icon && iconPosition attribute in button

--- a/index.html
+++ b/index.html
@@ -24,12 +24,22 @@
       body {
         margin: 20px;
       }
+      .icon {
+        width: 1em;
+        height: 1em;
+        vertical-align: -0.15em;
+        fill: currentColor;
+        overflow: hidden;
+      }
     </style>
   </head>
   <body>
     <div id="app">
-        <w-button></w-button>
+        <w-button>按钮</w-button>
+        <w-button icon="setting">按钮</w-button>
+        <w-button icon="setting" icon-position="right">按钮</w-button>
     </div>
     <script src="./src/app.js"></script>
+    <script src="//at.alicdn.com/t/font_1305117_2yvwwahsufv.js"></script>
   </body>
 </html>
