--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
     <div id="app">
         <w-button>按钮</w-button>
         <w-button icon="setting">按钮</w-button>
-        <w-button icon="setting" icon-position="right">按钮</w-button>
+        <w-button icon="setting" icon-position="right" :loading="true">按钮</w-button>
+        <w-button :loading="true">加载中</w-button>
     </div>
     <script src="./src/app.js"></script>
-    <script src="//at.alicdn.com/t/font_1305117_2yvwwahsufv.js"></script>
+    <script src="//at.alicdn.com/t/font_1305117_oectttb66so.js"></script>
   </body>
 </html>
