--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         --button-height: 32px;
         --border-color: #999;
         --border-radius: 4px;
-        --border-color-hover: #666;
+        --border-color-hover: red;
         --color: #333;
         --font-size: 14px;
         --button-bg: #fff;
@@ -32,6 +32,12 @@
         <w-button icon="setting">按钮</w-button>
         <w-button icon="setting" icon-position="right" :loading="true">按钮</w-button>
         <w-button :loading="true">加载中</w-button>
+        <w-button-group>
+          <w-button icon="left">上一页</w-button>
+          <w-button>更多</w-button>
+          <w-button>更多</w-button>
+          <w-button icon="right" icon-position="right">下一页</w-button>
+        </w-button-group>
     </div>
     <script src="./src/app.js"></script>
     <script src="//at.alicdn.com/t/font_1305117_oectttb66so.js"></script>
