--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         --button-height: 32px;
         --border-color: #999;
         --border-radius: 4px;
-        --border-color-hover: red;
+        --border-color-hover: #666;
         --color: #333;
         --font-size: 14px;
         --button-bg: #fff;
