--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <div id="app">
         <w-button :loading="loading" @click="loading = !loading">按钮</w-button>
-        <w-button icon="loadingSetting" @click="loadingSetting = !loadingSetting">设置</w-button>
+        <w-button icon="setting" @click="loadingSetting = !loadingSetting">设置</w-button>
         <w-button icon="download" icon-position="right" :loading="loadingDownload" @click="loadingDownload = ! loadingDownload">下载</w-button>
         <w-button :loading="true">加载中</w-button>
         <w-button-group>
@@ -45,6 +45,6 @@
         </w-button-group>
     </div>
     <script src="./src/app.js"></script>
-    <script src="//at.alicdn.com/t/font_1305117_oectttb66so.js"></script>
+    <script src="///at.alicdn.com/t/font_1305117_zhjdjl69u9b.js"></script>
   </body>
 </html>
