--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <w-input value="前端"></w-input>
       <w-input value="HTML" disabled></w-input>
       <w-input value="CSS" readonly></w-input>
+      <w-input value="JavaScript" error="报错了"></w-input>
       <w-button :loading="loading" @click="loading = !loading">按钮</w-button>
       <w-button icon="setting" @click="loadingSetting = !loadingSetting">设置</w-button>
       <w-button icon="download" icon-position="right" :loading="loadingDownload" @click="loadingDownload = ! loadingDownload">下载</w-button>
@@ -48,6 +49,6 @@
       </w-button-group>
     </div>
     <script src="./src/app.js"></script>
-    <script src="///at.alicdn.com/t/font_1305117_zhjdjl69u9b.js"></script>
+    <script src="//at.alicdn.com/t/font_1305117_ezsyxe035m5.js"></script>
   </body>
 </html>
