--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div id="app">
-      <w-input value="前端"></w-input>
+      <w-input value="前端"  @input="handleInput" @change="handleChange"></w-input>
       <w-input value="HTML" disabled></w-input>
       <w-input value="CSS" readonly></w-input>
       <w-input value="JavaScript" error="报错了"></w-input>
