Grid Row props 新增 justify

--- a/index.html
+++ b/index.html
@@ -34,37 +34,37 @@
   <body>
     <div id="app">
       <div class="grid-wrapper" style="background-color: yellow;">
-        <w-row :gutter="32">
-          <w-col :span="12">
-            <div style="background-color: #2092FF;">col-12</div>
-          </w-col>
-          <w-col :span="12"> 
-            <div style="background-color: #2092FF;">col-12</div>
-          </w-col>
-        </w-row>
-        <w-row :gutter="10">
-          <w-col :span="8">
+        <w-row :gutter="10" justify="space-around">
+          <w-col :span="3">
             <div style="background-color: #2092FF;">col-8</div>
           </w-col>
-          <w-col :span="8">
+          <w-col :span="3">
             <div style="background-color: #2092FF;">col-8</div>
           </w-col>
-          <w-col :span="8">
+          <w-col :span="3">
             <div style="background-color: #2092FF;">col-8</div>
           </w-col>
         </w-row>
-        <w-row :gutter="20">
-          <w-col :span="6">
-            <div style="background-color: #2092FF;">col-6</div>
+        <w-row :gutter="10" justify="space-evenly">
+          <w-col :span="3">
+            <div style="background-color: #2092FF;">col-8</div>
           </w-col>
-          <w-col :span="6">
-            <div style="background-color: #2092FF;">col-6</div>
+          <w-col :span="3">
+            <div style="background-color: #2092FF;">col-8</div>
           </w-col>
-          <w-col :span="6">
-            <div style="background-color: #2092FF;">col-6</div>
+          <w-col :span="3">
+            <div style="background-color: #2092FF;">col-8</div>
           </w-col>
-          <w-col :span="6">
-            <div style="background-color: #2092FF;">col-6</div>
+        </w-row>
+        <w-row :gutter="10" justify="space-between">
+          <w-col :span="3">
+            <div style="background-color: #2092FF;">col-8</div>
+          </w-col>
+          <w-col :span="3">
+            <div style="background-color: #2092FF;">col-8</div>
+          </w-col>
+          <w-col :span="3">
+            <div style="background-color: #2092FF;">col-8</div>
           </w-col>
         </w-row>
         <w-row :gutter="36">
