Grid WRow 新增 align

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
   </head>
   <body>
     <div id="app">
-      <div class="grid-wrapper" style="">
-        <w-row :gutter="10" justify="space-around">
+      <div class="grid-wrapper">
+        <w-row :gutter="10" justify="space-around" align-items="bottom">
           <w-col :span="3">
-            <div style="background-color: #2092FF;">col-8</div>
+            <div style="height: 50px; background-color: #2092FF;">col-8</div>
           </w-col>
           <w-col :span="3">
-            <div style="background-color: #2092FF;">col-8</div>
+            <div style="height: 80px; background-color: #2092FF;">col-8</div>
           </w-col>
           <w-col :span="3">
-            <div style="background-color: #2092FF;">col-8</div>
+            <div style="height: 110px; background-color: #2092FF;">col-8</div>
           </w-col>
         </w-row>
         <w-row :gutter="10" justify="space-evenly">
