--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
     <div id="app">
       <div class="grid-wrapper">
         <w-row :gutter="10" justify="space-around" align="bottom">
-          <w-col :span="3" :order="2">
+          <w-col :span="3" :order="20">
             <div style="height: 50px; background-color: #2092FF;">1111</div>
           </w-col>
-          <w-col :span="3" :order="1">
+          <w-col :span="3" :order="10">
             <div style="height: 80px; background-color: #2092FF;">222</div>
           </w-col>
-          <w-col :span="3" :ordere="11">
+          <w-col :span="3" :order="15">
             <div style="height: 110px; background-color: #2092FF;">333</div>
           </w-col>
         </w-row>
         <w-row :gutter="10" justify="space-evenly">
-          <w-col :span="12" :xs="2" :sm="4" :md="6" :lg="8" :xl="10" :xxl="12">
+          <w-col :span="12" :xs="2" :sm="0" :md="6" :lg="8" :xl="10" :xxl="12">
             <div style="background-color: #2092FF;">111</div>
           </w-col>
           <w-col :span="12" :xs="22" :sm="20" :md="18" :lg="16" :xl="14" :xxl="12">
@@ -57,11 +57,11 @@
           </w-col>
         </w-row>
         <w-row :gutter="10" justify="space-evenly">
-          <w-col :xs="{ span: 21, order: 1 }" :sm="{ span: 18 }" :md="{ span: 15 }" :lg="{ span: 12 }" :xl="{ span:9 }" :xxl="{ span: 6 }">
-            <div style="background-color: #FF4D4F;">111</div>
+          <w-col :xs="{ span: 21, order: 2 }" :sm="{ span: 18 }" :md="{ span: 15 }" :lg="{ span: 12 }" :xl="{ span:9 }" :xxl="{ span: 6 }">
+            <div style="background-color: #FECE42;">111</div>
           </w-col>
-          <w-col :xs="{ span: 2, offset: 1 }" :sm="{ span: 4, offset: 2 }" :md="{ span: 6, offset: 3 }" :lg="{ span: 8, offset: 4 }" :xl="{span: 10, offset: 5 }" :xxl="{ span: 12, offset: 6 }">
-            <div style="background-color: #2092FF;">222</div>
+          <w-col :xs="{ span: 2, offset: 1, order: 1 }" :sm="{ span: 4, offset: 2 }" :md="{ span: 6, offset: 3 }" :lg="{ span: 8, offset: 4 }" :xl="{span: 10, offset: 5 }" :xxl="{ span: 12, offset: 6 }">
+            <div style="background-color: #18A05E;">222</div>
           </w-col>
         </w-row>
       </div>
