Grid 组件完成 WCol 单元测测

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <div id="app">
       <div class="grid-wrapper">
         <w-row :gutter="10" justify="space-around" align="bottom">
-          <w-col :span="3" :order="20">
+          <w-col :span="3">
             <div style="height: 50px; background-color: #2092FF;">1111</div>
           </w-col>
-          <w-col :span="3" :order="10">
+          <w-col :span="3">
             <div style="height: 80px; background-color: #2092FF;">222</div>
           </w-col>
-          <w-col :span="3" :order="15">
+          <w-col :span="3">
             <div style="height: 110px; background-color: #2092FF;">333</div>
           </w-col>
         </w-row>
@@ -57,10 +57,10 @@
           </w-col>
         </w-row>
         <w-row :gutter="10" justify="space-evenly">
-          <w-col :xs="{ span: 21, order: 2 }" :sm="{ span: 18 }" :md="{ span: 15 }" :lg="{ span: 12 }" :xl="{ span:9 }" :xxl="{ span: 6 }">
+          <w-col :xs="{ span: 21 }" :sm="{ span: 18 }" :md="{ span: 15 }" :lg="{ span: 12 }" :xl="{ span:9 }" :xxl="{ span: 6 }">
             <div style="background-color: #FECE42;">111</div>
           </w-col>
-          <w-col :xs="{ span: 2, offset: 1, order: 1 }" :sm="{ span: 4, offset: 2 }" :md="{ span: 6, offset: 3 }" :lg="{ span: 8, offset: 4 }" :xl="{span: 10, offset: 5 }" :xxl="{ span: 12, offset: 6 }">
+          <w-col :xs="{ span: 2, offset: 1 }" :sm="{ span: 4, offset: 2 }" :md="{ span: 6, offset: 3 }" :lg="{ span: 8, offset: 4 }" :xl="{span: 10, offset: 5 }" :xxl="{ span: 12, offset: 6 }">
             <div style="background-color: #18A05E;">222</div>
           </w-col>
         </w-row>
