--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <w-button>更多</w-button>
         <w-button icon="right" icon-position="right">下一页</w-button>
       </w-button-group>
+      <w-button @click="showMessage">消息提示</w-button>
     </div>
     <script src="./src/app.js"></script>
     <script src="//at.alicdn.com/t/font_1305117_ezsyxe035m5.js"></script>
